@@ -366,6 +366,7 @@ function test_Schema() {
 	var NewTypes = NEWSCHEMA('NewTypes').make(function(schema) {
 		schema.define('capitalize', 'Capitalize');
 		schema.define('capitalize10', 'Capitalize(10)');
+		schema.define('capitalize2', 'Capitalize2');
 		schema.define('lower', 'Lower');
 		schema.define('lower10', 'Lower(10)');
 		schema.define('upper', 'Upper');
@@ -385,6 +386,7 @@ function test_Schema() {
 		var res = schema.make(obj);
 		assert.ok(res.capitalize === 'Total FraMEWOrk', 'SchemaBuilder: Capitalize');
 		assert.ok(res.capitalize10 === 'Total FraM', 'SchemaBuilder: Capitalize(10)');
+		assert.ok(res.capitalize2 === 'Total fraMEWOrk', 'SchemaBuilder: Capitalize2');
 		assert.ok(res.lower === 'total framework', 'SchemaBuilder: Lower');
 		assert.ok(res.lower10 === 'total fram', 'SchemaBuilder: Lower(10)');
 		assert.ok(res.upper === 'TOTAL FRAMEWORK', 'SchemaBuilder: Upper');
